--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.AndroidTutor"
         tools:targetApi="31">
         <activity
+            android:name=".ToastConceptActivity"
+            android:exported="false" />
+        <activity
             android:name=".ConceptsListScreen"
             android:exported="false" />
         <activity
